# google-adk-study

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json
workspace/python/agents/a2a-orchestrator/: Makefile  README.md  pyproject.toml  requirements.txt  start_a2a_servers.sh  stop_a2a_servers.sh
workspace/python/agents/a2a-orchestrator/a2a_orchestrator/: .env.example  __init__.py  agent.py
workspace/python/agents/a2a-orchestrator/analysis_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml
workspace/python/agents/a2a-orchestrator/content_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml
workspace/python/agents/a2a-orchestrator/research_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  pyproject.toml
workspace/python/agents/a2a-orchestrator/tests/: README.md  test_agent.py  test_imports.py  test_structure.py
workspace/python/agents/adk-interactions-integration/: Makefile  README.md  pyproject.toml  requirements.txt
workspace/python/agents/adk-interactions-integration/adk_interactions_agent/: .env.example  TOOLS.md  __init__.py  agent.py  demo.py  tools.py
workspace/python/agents/adk-interactions-integration/tests/: README.md  __init__.py  test_agent.py
workspace/python/agents/best-practices-agent/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
workspace/python/agents/best-practices-agent/best_practices_agent/: __init__.py  agent.py
workspace/python/agents/best-practices-agent/tests/: README.md  test_agent.py  test_imports.py  test_structure.py
workspace/python/agents/blog-pipeline/: README.md  pyproject.toml  Ｍakefile
workspace/python/agents/blog-pipeline/blog_pipeline/: README.md  agent.py
workspace/python/agents/blog-pipeline/tests/: README.md  test_agent.py  test_imports.py  test_structure.py
workspace/python/agents/brand-search-optimization/: GUIDE.md  Makefile  README.md  customization.md  env.example  main.py  pyproject.toml
workspace/python/agents/brand-search-optimization/brand_search_optimization/: agent.py  prompt.py
workspace/python/agents/brand-search-optimization/deployment/: bq_data_setup.sql  bq_populate_data.py  deploy.py  eval.sh  run.sh  test.sh  test_deployment.py
workspace/python/agents/brand-search-optimization/tests/: example_interaction.md
workspace/python/agents/chuck-norris-agent/: README.md  pyproject.toml
workspace/python/agents/chuck-norris-agent/chuck_norris_agent/: agent.py
workspace/python/agents/chuck-norris-agent/tests/: README.md  test_agent.py  test_imports.py  test_structure.py
workspace/python/agents/content-publisher/: Makefile  README.md  agent_architecture.md  pyproject.toml
workspace/python/agents/content-publisher/content_publisher/: agent.py
workspace/python/agents/content-publisher/tests/: README.md  test_agent.py  test_imports.py  test_structure.py
workspace/python/agents/context-compaction-agent/: Makefile  README.md  app.py  pyproject.toml
workspace/python/agents/context-compaction-agent/context_compaction_agent/: .env.example  __init__.py  agent.py
workspace/python/agents/custom-session-agent/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  view_sessions.py
workspace/python/agents/customer-support/: Makefile  README.md  pyproject.toml  requirements.txt  run_agent.py  setup.py
workspace/python/agents/customer-support-agent/: Makefile  README.md  pyproject.toml  requirements.txt
workspace/python/agents/data-analysis-dashboard/: Makefile  README.md  pyproject.toml  sample_sales_data.csv
workspace/python/agents/deep-research-agent/: Makefile  README.md  pyproject.toml  requirements.txt
workspace/python/agents/essay-refiner/: Makefile  README.md  main.py  pyproject.toml
workspace/python/agents/gepa-optimization-agent/: GEPA.md  Makefile  README.md  gepa_demo.py  gepa_real_demo.py  pyproject.toml  requirements.txt
workspace/python/agents/grounding-agent/: README.md  main.py  pyproject.toml
workspace/python/agents/guarding-agent/: .env.example  Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml  tasks.md
workspace/python/agents/live-interact-agent/: BUILD.md  Dockerfile  Makefile  README.md  VARS.md  pyproject.toml
workspace/python/agents/mcp-a2a-master/: .env.example  ARCHI.md  IMPROVEMENTS.md  Makefile  README.md  kill_ports.sh  main.py  pyproject.toml  start_all.sh  tutorial.md
workspace/python/agents/multi-llm-agent/: Makefile  README.md  pyproject.toml  requirements.txt
workspace/python/agents/not-chat-gpt/: .gitignore  .markdownlint.json  CLI_README.md  Makefile  README.md  docker-compose.yml  main.py  not_chat_gpt.db  planning.md  pyproject.toml  requirements.txt  start_server.sh  test_cli.sh  test_report.html  verify_cli.py
workspace/python/agents/observability-plugins-agent/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
workspace/python/agents/pack-adk-a2a-agent/: Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml
workspace/python/agents/pack-auto-insurance-agent/: Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml  pyproject.toml.bk  starter_pack_README.md  starter_pack_pyproject.toml  test.md
workspace/python/agents/pack-bidi-streaming/: .env.example  ARCHITECTURE.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml  starter_pack_README.md
workspace/python/agents/pack-customer-service/: Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml  starter_pack_README.md
workspace/python/agents/pack-deep-search/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  starter_pack_README.md
workspace/python/agents/pack-policy-as-code/: .codespellrc  .env.example  CICD.md  Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml  starter_pack_README.md
workspace/python/agents/pack-rag/: .env.example  Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml
workspace/python/agents/pause-resume-agent/: Makefile  README.md  app.py  pyproject.toml
(+1788 files in other folders)
