[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-agent"
version = "0.1.0"
# 描述：使用 Google Gemini Interactions API 的深度研究代理範例 - 自主多步驟研究任務
description = "Deep Research Agent example using Google Gemini Interactions API - autonomous multi-step research tasks"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.55.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["research_agent*"]
