[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorial07"
version = "0.1.0"
description = "Tutorial 07: Loop Agents - Essay Refiner Agent"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
]
