[project]
name = "mcp-a2a-master"
version = "0.1.0"
description = "在此處新增您的專案描述"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.2.15",
    "asyncclick>=8.1.8",
    "google-adk>=1.7.0",
    "mcp[cli]>=1.12.0",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
]
