[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-llm-agent"
version = "0.1.0"
description = "教學 28: 透過 LiteLLM 使用其他 LLM"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.15.1",
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
