[project]
name = "not-chat-gpt"
version = "0.1.0"
description = "基於 Google Gemini 2.0 Flash 與 Google ADK (Agent Development Kit) 構建的智能對話助手，整合學習精華，實現安全、可追溯、具備文檔檢索能力的對話系統。"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=23.0.0",
    "debugpy>=1.8.19",
    "flake8>=6.0.0",
    "google-adk>=1.15.1",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "redis>=7.1.0",
]
